lab1/Test/L1-A-13-35.output
Error Type A at Line 1
Error Type B at Line 4
Error Type B at Line 12
Error Type B at Line 22
Error Type A at Line 25
Error Type A at Line 41
